--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -5,7 +5,7 @@
     <link rel = "stylesheet" href = "css/index.css">
 </head>
 <body>
-    <h1>Open Astronomy Catalogs</h1>
+    <h1>Open Astronomy Catalogs!</h1>
     <p>Learn about astronomical events.</p>
 <p>
     <a href = "/supernovae">Supernovae</a>
